2014-03-03  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (html-create-permission-form)
	(html-edit-permission-form): Only offer commands the user may use.  This
	hides disabled commands.

2014-03-03  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (result [result-body]): Check if tags are
	empty before adding section.

2014-03-03  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/classic/omp.xsl (result [result-body]): Remove newstyle nvt's
	checks.
	(gsa:newstyle-nvt): Remove function.

2014-03-03  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (html-create-alert-form)
	(html-edit-alert-form, alert, alert [trash], alert [details])
	(html-alerts-trash-table): Add i18n.

	* src/html/classic/po/de.xml: Add translations for alert pages.

2014-03-03  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (tag_attach_types): Only offer types that the
	user may GET, except when the type is selected.

	* src/gsad_omp.c (new_tag): Default attach_type to "" because the
	default now depends on the user's access rights.

2014-03-03  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (html-create-lsc-credential-form)
	(html-edit-lsc-credential-form, lsc-credential-download-icons)
	(lsc_credential [trash], lsc_credential [details])
	(html-lsc-credentials-trash-table): Add i18n.

	* src/html/classic/po/de.xml: Add translations for credentials pages.

2014-03-03  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (html-create-port-list-form)
	(port_list [trash], port_list [details], html-edit-port-list-form)
	(html-port-lists-trash-table): Add i18n.

	* src/html/classic/po/de.xml: Add translations for port list pages.

2014-02-28  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (task [trash]): Add i18n for "... must be
	restored first" tooltip.